cd2t-100-core/src/test/resources/invalidGroovy/InvalidImplicitLocation.groovy
@Opcode("INVIMPLLOC")
class InvalidImplicitLocation {
  static void apply(ExecutionEnvironment execEnv,
                    @Parameter(parameterType = ParameterType.REGISTER,
                               implicitValue = "ACC") int[] acc,
                    @Parameter(parameterType = ParameterType.NUMBER) int num)
  {

  }
}
